# DesktopPet

./: CMakeLists.txt  README.md  main.cpp
Services/: CMakeLists.txt
Services/Base/: CMakeLists.txt  DServiceBase.h  datatype.h
Services/WidgetServices/: CMakeLists.txt
Services/WidgetServices/MainWidget/: CMainNoteListViewModel.cpp  CMainNoteListViewModel.h  CMakeLists.txt
Widgets/: CMakeLists.txt  ListOfNotes.qml
